--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         .calculator-result { background: linear-gradient(135deg, #10b981 0%, #059669 100%); }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17481395184">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17481395184');
+</script>
 <body class="bg-gray-50">
 
     <!-- Security Alert Modal -->
